[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player/HookPoint.gd" type="Script" id=2]
[ext_resource path="res://Art/UI/crosshair.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/hookpoint.png" type="Texture" id=7]
[ext_resource path="res://Lib/GVTween/GVTween.gd" type="Script" id=8]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0766798, 0, 0, Vector2( 1, 1 ), 2.62802e-07, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
shape = SubResource( 2 )

[node name="HookPointLeft" type="Node" parent="."]
script = ExtResource( 2 )

[node name="HookPointRight" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.47676, 0 )

[node name="CameraBoom" type="SpringArm" parent="CameraPivot"]
collision_mask = 2147483649
spring_length = 7.0

[node name="Camera" type="Camera" parent="CameraPivot/CameraBoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.816874, 0 )

[node name="RayCastLeft" type="RayCast" parent="CameraPivot/CameraBoom/Camera"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 1.66081e-06, -3.45201, -5.097 )

[node name="RayCastRight" type="RayCast" parent="CameraPivot/CameraBoom/Camera"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 1.66081e-06, -3.45201, -5.097 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 4

[node name="Control" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Sprite" parent="HUD/Control"]
texture = ExtResource( 3 )

[node name="HookPointLeft" type="Sprite" parent="HUD/Control/Crosshair"]
position = Vector2( -6, 0 )
texture = ExtResource( 7 )

[node name="HookPointRight" type="Sprite" parent="HUD/Control/Crosshair"]
position = Vector2( 6, 0 )
texture = ExtResource( 7 )
flip_h = true

[node name="GVTween" type="Node" parent="."]
script = ExtResource( 8 )
_curve = SubResource( 3 )
